test(fix): List.of 로 생성하여 오름차순 정렬 불가했던 문제 해결